# iaq

./: airgo-2-sensors.ipynb  airgo_2_sensors_data_1.csv  airgo_2_sensors_data_2.csv  airgo_curtain_1.csv  airgo_curtain_2.csv  airgo_fan_on_off_1.csv  airgo_fan_on_off_2.csv  airgo_w_curtain_1.csv  airgo_w_curtain_2.csv  collect_data.py  laminair_and_airgo_14_inches_1.csv  laminair_and_airgo_14_inches_2.csv  laminair_and_airgo_fan_on_off_1.csv  laminair_and_airgo_fan_on_off_2.csv  laminair_orientation_1.csv  laminair_orientation_2.csv  laminair_with_fan_on_off_1.csv  laminair_with_fan_on_off_2.csv  milestone_eoy_2023_1.csv  milestone_eoy_2023_2.csv  milestone_eoy_2023_part_2_1.csv  milestone_eoy_2023_part_2_2.csv  mv.py  pyproject.toml  requirements.txt  sensor_data_1.csv  sensor_data_2.csv  test  utilities.py
notebooks/: airgo-2-sensors.ipynb  airgo-and-laminair.ipynb  airgo-testing-1-sensor.ipynb  milestone-eoy-2023.ipynb
